# PRG32

./: .gitignore  AGENTS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  PRG32.code-workspace  README.md  README_improved.md  partitions_prg32.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.qemu
.github/workflows/: ci.yml
components/prg32/: CMakeLists.txt  Kconfig  idf_component.yml  prg32_abi_exports.c  prg32_audio.c  prg32_cart.c  prg32_console.c  prg32_controller.c  prg32_debug_overlay.c  prg32_diag.c  prg32_display_ili9341.c  prg32_display_qemu_rgb.c  prg32_http_games.c  prg32_http_scores.c  prg32_input.c  prg32_splash.c  prg32_sprite.c  prg32_system.c  prg32_tile.c  prg32_wifi.c  prg32_wifi_scores.c
components/prg32/assets/: prg32_splash_logo.c
components/prg32/include/: prg32.h
components/prg32_audio/: audio.c
components/urg32/: CMakeLists.txt  urg32_audio.c  urg32_console.c  urg32_controller.c  urg32_display_ili9341.c  urg32_input.c  urg32_sprite.c  urg32_tile.c  urg32_wifi_scores.c
components/urg32/include/: urg32.h
docs/: README_REPLACEMENT.md  audio.md  cartridge-format.md  cartridges.md  course_full_design.md  deployment.md  engineering_hardening_plan.md  external_controllers.md  framework_manual.md  framework_manual_update_controllers_wifi.md  gold_standard_main.c  hardware.md  ili9341_notes.md  publication_plan.md  qemu.md  score_api.md  teaching_pipeline.md  teaching_with_prg32.md  tutorial.md  tutorial_ascii_game.md  tutorial_c_game.md  tutorial_graphic_game.md  usb_game_controllers.md  wifi_score_api.md
docs/images/: README.md
docs/labs/: README.md  break_fix_assignments.md  debugging_memory_inspection.md  debugging_register_tracing.md  lab_01_hello_world.md  lab_02_input.md  lab_03_graphics.md  lab_04_sound.md  lab_05_scores_and_controllers.md
examples/features/: README.md
examples/features/audio_mono_beep/: README.md
examples/features/audio_mono_sample/: README.md
examples/features/audio_mono_tracker/: README.md
examples/features/audio_stereo_music/: README.md
examples/features/audio_stereo_pan_test/: README.md
examples/features/splash_screen/: README.md
examples/features/wifi_setup/: README.md
examples/games/: README.md
examples/games/asteroids/: README.md
examples/games/pong/: README.md
games/breakout/ascii/: game.S
games/breakout/graphics/: game.S
games/pacman/ascii/: game.S
games/pacman/graphics/: game.S
games/pong/ascii/: game.S
games/pong/graphics/: game.S
games/space_invaders/: README.md
games/space_invaders/ascii/: game.S
games/space_invaders/graphics/: game.S
hardware/: README.md
hardware/case/: prg32_case.scad
hardware/kicad/: PRG32_reference_board.kicad_pro  README.md  URG32_reference_board.kicad_pro
hardware/prg32_v2/: PRG32_v2.kicad_pro  README.md  enclosure.scad
hardware/usb_gamepad_bridge/: README.md
main/: CMakeLists.txt  main.c  prg32_config.h  urg32_config.h
scripts/: load_cart.sh  run_qemu.sh  run_qemu_demo.sh  smoke_test.sh  start.sh
tools/: prg32_game.py  qemu.ps1  qemu.sh
tools/prg32_score_server/: README.md  app.py
(+10 files in other folders)
